--- a/LSTM_with_STFT.ipynb
+++ b/LSTM_with_STFT.ipynb
@@ -3,9 +3,15 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "LSTM with STFT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMJmGMdRnT6AGKkgT0DB9w3",
+      "collapsed_sections": [
+        "UVwHHRS7-4xK",
+        "wGTtQkS7-Ucf",
+        "z6rfW3YJDPJW",
+        "fvXvmWaPJEcc",
+        "jHmXekhNNM8n"
+      ],
+      "authorship_tag": "ABX9TyO+LajhOw7Q1/QMiO8eG8BP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +39,7 @@
         "id": "UVwHHRS7-4xK"
       },
       "source": [
-        "# Import Library"
+        "# Import Library Jalankan Pertama"
       ]
     },
     {
@@ -62,7 +68,7 @@
         "id": "wGTtQkS7-Ucf"
       },
       "source": [
-        "# Load Dataset"
+        "# Load Dataset Jalankan Kedua"
       ]
     },
     {
@@ -914,7 +920,7 @@
         "id": "z6rfW3YJDPJW"
       },
       "source": [
-        "# Feature Extraction"
+        "# Feature Extraction Jalankan Ketiga"
       ]
     },
     {
@@ -1608,7 +1614,7 @@
         "id": "fvXvmWaPJEcc"
       },
       "source": [
-        "# Model RNN"
+        "# Model RNN Jalankan Keempat"
       ]
     },
     {
@@ -2118,7 +2124,7 @@
         "id": "jHmXekhNNM8n"
       },
       "source": [
-        "# Testing Model"
+        "# Testing Model Jalankan Kelima"
       ]
     },
     {
