--- a/CNN_with_STFT.ipynb
+++ b/CNN_with_STFT.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CNN with STFT.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNVG74WAeUSUFv0MurIruF0",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMk69tw7xei1bSBhHSaqa3q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gustavsmnt/Classification-Analysis-using-CNN-and-LSTM-on-Wheezing-Sounds/blob/main/CNN_with_STFT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# IMPORT LIBRARY JALANKAN PERTAMA"
+      ],
+      "metadata": {
+        "id": "5OHUJB13vTOK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -53,6 +64,15 @@
         "\n",
         "from sklearn.svm import SVC"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yqBMIL7svR50"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -907,6 +927,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#FITUR EKSTRAKSI JALANKAN KEDUA"
+      ],
+      "metadata": {
+        "id": "F2iFBaMNvhrr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "PVKCihnZCfjf"
       },
@@ -1372,6 +1403,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#MODEL CNN JALANKAN KETIGA"
+      ],
+      "metadata": {
+        "id": "K5b6orrjvovF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "TsFbQmSUF42r"
       },
@@ -1796,6 +1838,17 @@
           "execution_count": 121
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#TESTING MODEL JALANKAN KEEMPAT"
+      ],
+      "metadata": {
+        "id": "wNBJhhFCvvOn"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
