--- a/CNN_with_MFCC.ipynb
+++ b/CNN_with_MFCC.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CNN with MFCC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPB9KHXnINf0IDHgwF5Ywrf",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNQ9Ppd1kScyKXMbXv1L8eH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gustavsmnt/Classification-Analysis-using-CNN-and-LSTM-on-Wheezing-Sounds/blob/main/CNN_with_MFCC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#IMPORT LIBRARY JALANKAN PERTAMA"
+      ],
+      "metadata": {
+        "id": "_5w8jAKwv3tA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -907,6 +918,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#FITUR EKSTRAKSI JALANKAN KEDUA"
+      ],
+      "metadata": {
+        "id": "IFP9UXABv8Lm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "PVKCihnZCfjf"
       },
@@ -1228,6 +1250,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#MODEL CNN JALANKAN KETIGA"
+      ],
+      "metadata": {
+        "id": "0CLNmpwSwATT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "TsFbQmSUF42r"
       },
@@ -1334,6 +1367,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MODEL TESTING JALANKAN KEEMPAT"
+      ],
+      "metadata": {
+        "id": "STxu3HwuwF1X"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
